# mlfow-hud

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.shrug  README.md  convert_diff.py  golden_diff.txt  pyproject.toml  run_pentest_task.py  run_tests_docker.py  single_task.json  tasks.json  test_full_info.py  test_one_day.py  test_restart.py  test_run.py  test_task.json  test_zero_day.json  test_zero_day.py
shared/controller/: mlflow_health_grader.py  pentest_grader.py  spec.py  test_grader.py
src/controller/: env.py  server.py
src/controller/cves/: cve_2025_99999.py
