[project]
name = "mlflow-hud"
version = "0.1.0"
description = "MLFlow vulnerability environment"
requires-python = ">=3.11, <3.13"
dependencies = [ "mcp", "pydantic>=2.0.0", "hud-python @ git+https://github.com/hud-evals/hud-python.git@fix-hud-server-imports",]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[tool.hud]
image = "mlflow-hud:latest"

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources.hud-python]
git = "https://github.com/hud-evals/hud-python.git"

[tool.hatch.build.targets.wheel]
packages = [ "src/controller",]
